# RagForge

./: .gitignore  Dockerfile  README.md  pyproject.toml  vercel.json
.github/workflows/: docs.yml
benchmarks/: README.md  migration_gate_scifact.json  run_migration_gate_benchmark.py
examples/: answer_demo.py  docling_vs_default.py  eval_demo.py  migration_gate_demo.py  multi_agent_coordination.py  pipeline_demo.py  sample.md  sample_with_table.html
examples/clients/: curl_example.sh  javascript_client.mjs  python_client.py
ragforge/: __init__.py  cli.py  tracing.py
ragforge/api/: __init__.py  app.py
ragforge/api/routes/: __init__.py  capabilities.py  chunk.py  coordination.py  evaluate.py  health.py  knowledge.py  migrate.py  parse.py  quantize.py  query.py  traces.py  ui_chat.py  ui_eval.py
ragforge/chunking/: __init__.py  base.py  docling_chunker.py  text_chunker.py
ragforge/coordination/: __init__.py  agent.py  benchmark.py  blackboard.py  tracing.py
ragforge/core/: __init__.py  models.py  registry.py
ragforge/evaluation/: __init__.py  evaluator.py  golden.py  metrics.py
ragforge/migration/: __init__.py  gate.py  migrator.py
ragforge/parsing/: __init__.py  base.py  docling_parser.py  text_parser.py
ragforge/pipeline/: __init__.py  bm25.py  embeddings.py  generation.py  knowledge.py  retriever.py  store.py
ragforge/quantization/: __init__.py  quantizer.py
ragforge/ui_static/: index.html
ragforge/ui_static/assets/: index-DFg84m7P.js  index-llXpynB6.css
tests/: test_api.py  test_chunking.py  test_cli.py  test_coordination.py  test_core.py  test_docling.py  test_evaluation.py  test_generation.py  test_migration.py  test_migration_gate.py  test_parsing.py  test_pipeline.py  test_quantization.py  test_ui_backend.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css
ui/src/sections/: Chat.tsx  Evaluate.tsx  Traces.tsx
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: contributing.md
website/docs/any-language/: clients.md  overview.md
website/docs/core-concepts/: architecture.md  documents-and-chunks.md  plugin-registry.md
website/docs/getting-started/: installation.md  introduction.md  quickstart.md
website/docs/guides/: chunking.md  coordination.md  evaluation.md  migration.md  parsing.md  pipeline.md  quantization.md  ui.md
website/docs/reference/: cli.md  http-api.md  python-api.md
website/src/components/: AnimatedFlows.tsx  FeatureFlows.tsx
website/src/css/: custom.css
website/src/data/: featureDemos.ts
website/src/pages/: index.module.css  index.tsx
